@@ -1,6 +1,8 @@
 v0.3.1 (Unstable development revision)
 - Test UPnP and source explorer in management dialog
 - Test upgrading to future .xml storage of user shortcuts
+- Fixes: No favourites showing in management dialog
+         Script crash on choosing empty group in skin-managed selection dialog
 
 v0.3.0
 - Fix escaping of main menu items (includes method)
